# yml_dialog

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  complete_example.d.ts  complete_example.js  complete_example_bg.wasm.d.ts  index.html
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: atm.yml  complete_example.rs  fto_dialog_wall.rs  simple_monologue.rs  test_dialog.yml
src/: constants.rs  lib.rs  main.rs
src/ui/: dialog_box.rs  dialog_panel.rs  dialog_player.rs  dialog_scroll.rs  dialog_system.rs  mod.rs
tests/: dialog_system_tests.rs  yaml_serde_test.rs
