[package]
name = "yml_dialog"
version = "0.2.0"
authors = ["Olf EPAIN <wabtey@disroot.org>", "Morgan Van Amerongen <vanamerongen.morgan@gmail.com>"]
description = "A very light base structure to implement an Rust Dialog using YML (file) format"
keywords = ["game", "rust", "structure", "dialog", "yml", "bevy", "serialize", "deserialize"]
categories = ["game-development", ]
readme = "README.md" 
repository = "https://github.com/Fabinistere/yml_dialog"
homepage = "fabinistere.github.io"
documentation = "https://docs.rs/yml_dialog"
license = "MIT OR Apache-2.0"
edition = "2021"

exclude = [
    "assets/*",
    "examples/test_dialog.yml",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# ----------- Debug -----------
log = "0.4.17"

[dev-dependencies]
bevy = "0.10" #  version = "0.10", git = "https://github.com/bevyengine/bevy", rev="9788b386c7846c99978ab5c1a33698ec5a471d84", default-features = false
bevy_tweening = "0.7" # 0.8

rand = "0.8.5"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1